[gd_scene load_steps=7 format=3 uid="uid://c32he6yne4syd"]

[ext_resource type="Script" path="res://plugins/minigames/memory/card.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://70ke1viv7wi3" path="res://plugins/minigames/memory/cards/card_back.png" id="3"]
[ext_resource type="Texture2D" uid="uid://btkpeknt0qwrv" path="res://plugins/minigames/memory/background_blue.svg" id="4"]
[ext_resource type="Texture2D" uid="uid://calsn7eofm8ar" path="res://plugins/minigames/memory/background_red.svg" id="5"]

[sub_resource type="Animation" id="1"]
resource_name = "flip_down"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Front:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -180)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Back:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 180), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="2"]
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Front:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 180), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Back:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -180)]
}

[node name="Card" type="Node3D"]
script = ExtResource("2")

[node name="Player1" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.2, 1.8)
visible = false
pixel_size = 0.0013
axis = 1

[node name="Sprite3D" type="Sprite3D" parent="Player1"]
transform = Transform3D(-1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, -0.1, 0)
pixel_size = 0.009
axis = 1
texture = ExtResource("4")

[node name="Player2" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.2, 1.8)
visible = false
pixel_size = 0.0013
axis = 1

[node name="Sprite3D" type="Sprite3D" parent="Player2"]
transform = Transform3D(-1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, -0.1, 0)
pixel_size = 0.009
axis = 1
texture = ExtResource("4")

[node name="Player3" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.2, -1.8)
visible = false
pixel_size = 0.0013
axis = 1

[node name="Sprite3D" type="Sprite3D" parent="Player3"]
transform = Transform3D(-1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0, -0.1, 0)
pixel_size = 0.009
axis = 1
texture = ExtResource("5")

[node name="Player4" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.2, -1.8)
visible = false
pixel_size = 0.0013
axis = 1

[node name="Sprite3D" type="Sprite3D" parent="Player4"]
transform = Transform3D(-1.62921e-07, 0, -1, 0, 1, 0, 1, 0, -1.62921e-07, 0, -0.1, 0)
pixel_size = 0.009
axis = 1
texture = ExtResource("5")

[node name="Front" type="Sprite3D" parent="."]
pixel_size = 0.005
axis = 1
double_sided = false

[node name="Back" type="Sprite3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, 0, 0)
pixel_size = 0.005
axis = 1
double_sided = false
texture = ExtResource("3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/flip_down = SubResource("1")
anims/flip_up = SubResource("2")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
